# sentiment-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_pipeline.yml
app/: app.py  figures.py  main.py  plotly-cloud.toml
app/data/: main.py  pipeline.py
app/data/scrapers/: __init__.py  base.py  cnbc_scraper.py  finviz_scraper.py  yfinance_scraper.py
app/model/: debug.py  main.py
app/model/tests/: run_sentiment.py
app/viz/: app.py  dashboard.py  data_loader.py  example.py  example_plot.py  figures.py  layout.py  tempdata.py
scripts/: sentiment.py  setup.py
